# mcp-servers

./: .gitignore
cline-rules-server/: README.md  pyproject.toml  requirements.txt  rules_server.py
cline-rules-server/rules/: global_rules.md  local_rules.md
